plugins {
    id 'java'
    id 'application'
}

group = 'com.daclink'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

application {
    mainClass = 'Main'
}

repositories {
    mavenCentral()
}

def javafxVersion = '25'
def javafxClassifier = 'win'

dependencies {

    // JavaFX modules
    implementation "org.openjfx:javafx-base:${javafxVersion}:${javafxClassifier}"
    implementation "org.openjfx:javafx-graphics:${javafxVersion}:${javafxClassifier}"
    implementation "org.openjfx:javafx-controls:${javafxVersion}:${javafxClassifier}"
    implementation "org.openjfx:javafx-fxml:${javafxVersion}:${javafxClassifier}"


    // SQLite JDBC driver
    implementation 'org.xerial:sqlite-jdbc:3.50.3.0'


    // H2 Database Engine for testing
    testImplementation 'com.h2database:h2:2.3.232'


    // JUnit
    testImplementation platform('org.junit.jupiter:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


// Pass JavaFX module-path and add-modules to the run task
run {
    doFirst {
        jvmArgs = [
                '--module-path', configurations.runtimeClasspath.asPath,
                '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}


test {
    useJUnitPlatform()
}